# file-manager

./: CMakeLists.txt  README.md  Tree.c  main.c  path_utils.c  path_utils.h
example/: tree_example.c
src/: hash.c  hash.h  tree.c  tree.h
src/util/: err.c  err.h  paths.c  paths.h
